--- a/client/src/main.css
+++ b/client/src/main.css
@@ -3,3 +3,10 @@ body {
 	color: white;
 	font-family: "Roboto", sans-serif;
 }
+
+.mainContainer {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
