--- a/client/src/components/Index/dashboard.css
+++ b/client/src/components/Index/dashboard.css
@@ -16,11 +16,11 @@
 .topRowContainer {
 	height: 5%;
 	width: 100%;
-	background-color: rgb(77, 59, 59);
+	background-color: #202020;
 	border-bottom: 1px solid white;
 	display: flex;
-    justify-content: space-between;
-    align-items: center
+	justify-content: space-between;
+	align-items: center;
 }
 .topRowContainer > button {
 	display: flex;
@@ -31,6 +31,20 @@
 .conversationtopRowContainer {
 	height: 5%;
 	width: 100%;
-	background-color: rgb(77, 59, 59);
+	background-color: #202020;
 	border-bottom: 1px solid white;
+}
+
+.singleConversationContainer{
+	height: 5%;
+	width: 100%;
+	background-color: #202020;
+	border-bottom: 1px solid white;
+	display: flex;
+	justify-content: flex-start;
+}
+
+
+.conversationTitle{
+	margin-left: 1rem;
 }
