commit before shad

--- a/client/src/components/Index/dashboard.css
+++ b/client/src/components/Index/dashboard.css
@@ -71,3 +71,13 @@
 	width: 100%;
 	overflow: auto;
 }
+.messageInputContainer {
+	height: 5%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	bottom: 0;
+	position: absolute;
+	border-top: 1px solid white;
+}
