--- a/client/src/components/Index/dashboard.css
+++ b/client/src/components/Index/dashboard.css
@@ -65,11 +65,28 @@
 .conversationContentContainer {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	height: 100%;
 	width: 100%;
 	overflow: auto;
+}
+
+.messageCard {
+	height: 5%;
+	max-height: 50%;
+	max-width: 50%;
+	width: 25%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	margin: 0.5rem;
+	background-color: #202020;
+	border: 1px solid white;
+	border-radius: 10px;
+}
+
+.messageCard .message {
+	margin-left: 1rem;
 }
 .messageInputContainer {
 	height: 5%;
