--- a/client/src/components/Index/dashboard.css
+++ b/client/src/components/Index/dashboard.css
@@ -65,14 +65,13 @@
 .conversationContentContainer {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	height:70%;
 	width: 100%;
-	overflow: auto;
+	overflow-y: auto;
 }
 
 .messageCard {
-	height: 10%;
-	max-height: 50%;
+	height: auto;
 	max-width: 50%;
 	width: 25%;
 	display: flex;
@@ -83,6 +82,16 @@
 	background-color: #202020;
 	border: 1px solid white;
 	border-radius: 10px;
+	padding: 0.5rem;
+}
+
+.messageCard.currentUserMessage {
+	align-self: flex-end;
+}
+
+.messageCard.otherUserMessage {
+	align-self: flex-start;
+	background-color: #3a3a3a;
 }
 .messageCard .messageUsername {
 	margin-left: 1rem;
@@ -107,6 +116,6 @@
 	justify-content: center;
 	align-items: center;
 	bottom: 0;
-	position: absolute;
+	position: sticky;
 	border-top: 1px solid white;
 }
