--- a/client/src/components/Index/dashboard.css
+++ b/client/src/components/Index/dashboard.css
@@ -28,16 +28,42 @@
 	align-items: center;
 	width: 15%;
 }
+
+.conversationContainer {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
 .conversationtopRowContainer {
 	height: 5%;
 	width: 100%;
 	background-color: #202020;
-	border-bottom: 1px solid white;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	border-bottom: 1px solid white;
+}
+.conversationContentContainer {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	min-height: 90%;
+	max-height: 90%;
+	overflow-y: auto;
 }
 
+.messageInputContainer {
+	height: 5%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-top: 1px solid white;
+	background-color: #202020;
+}
 .conversationParticipantsNames > span {
 	margin-right: 1rem;
 }
@@ -62,26 +88,19 @@
 .conversationTitle:hover {
 	cursor: pointer;
 }
-.conversationContentContainer {
-	display: flex;
-	flex-direction: column;
-	height:73%;
-	width: 100%;
-	overflow-y: auto;
-}
 
 .messageCard {
-	height: auto;
 	max-width: 50%;
 	width: 25%;
+	height: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-	margin: 0.5rem;
 	background-color: #202020;
 	border: 1px solid white;
 	border-radius: 10px;
+	margin: 0.5rem;
 	padding: 0.5rem;
 }
 
@@ -108,14 +127,4 @@
 	margin-top: 1rem;
 	font-size: 0.8rem;
 	color: rgba(255, 255, 255, 0.635);
-}
-.messageInputContainer {
-	height: 5%;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	bottom: 0;
-	position: absolute;
-	border-top: 1px solid white;
 }
