--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -72,7 +72,7 @@
 	background-color: #202020;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.124);
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 }
 
@@ -126,4 +126,3 @@
 	font-size: 0.8rem;
 	color: rgba(255, 255, 255, 0.635);
 }
-
