--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -35,7 +35,11 @@
 	display: flex;
 	flex-direction: column;
 }
-
+.sideBarConvosContainer{
+	overflow-y: auto;
+	max-height: 90vh;
+	min-height: 90vh;
+}
 .conversationtopRowContainer {
 	height: 5%;
 	width: 100%;
@@ -67,7 +71,7 @@
 }
 
 .singleConversationContainer {
-	height: 7.5%;
+	height: 8.5%;
 	width: 100%;
 	background-color: #202020;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.124);
