added message creation, todo, update conversation

--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -35,7 +35,7 @@
 	display: flex;
 	flex-direction: column;
 }
-.sideBarConvosContainer{
+.sideBarConvosContainer {
 	overflow-y: auto;
 	max-height: 90vh;
 	min-height: 90vh;
@@ -57,21 +57,13 @@
 	min-height: 90vh;
 }
 
-.messageInputContainer {
-	height: 5%;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-top: 1px solid white;
-	background-color: #202020;
-}
 .conversationParticipantsNames > span {
 	margin-right: 1rem;
 }
 
 .singleConversationContainer {
 	height: 8.5%;
+	max-height: 8.5%;
 	width: 100%;
 	background-color: #202020;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.124);
@@ -131,4 +123,20 @@
 	color: rgba(255, 255, 255, 0.635);
 }
 
+.messageInputContainer {
+	border-top: 1px solid white;
+	background-color: #202020;
+	height: 5vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
+.messageInput {
+	background-color: #101010;
+	border: 1px solid rgba(255, 255, 255, 0.442);
+	color: white;
+	padding: 0.5rem;
+	width: 80%;
+	margin-left: 5%;
+}
